--- a/index.html
+++ b/index.html
@@ -169,11 +169,7 @@
             >project. -->
               <p style="width: 98%; max-width: 500px">
                 Embark on a journey into the dynamic world of cryptocurrency
-                investment with the Elsa. Designed for forward-thinking
-                investors, this ETF offers direct exposure to Bitcoin, enabling
-                you to seamlessly integrate the most prominent digital currency
-                into your portfolio. Dive into the digital age of investment and
-                be part of the Bitcoin evolution.
+                investment with the Elsa.
               </p>
             </span>
           </a>
@@ -222,23 +218,22 @@
               </div>
               <div class="cs-height_20 cs-height_lg_20"></div>
               <a style="color: #fff; font-size: 20px">
-                Bitwise is seeding their etf with the most out of all the etfs
-                with $200m .The Elsa represents a pioneering leap in the world
-                of investment, bridging the gap between traditional finance and
-                the burgeoning domain of cryptocurrency. Created by Bitwise
-                Asset Management, a leader in crypto-based funds, this ETF is
-                designed to track the performance of Bitcoin, offering investors
-                a transparent, secure, and efficient way to gain exposure to the
-                digital currency market.
+                IT'S A UNIQUE TRIBUTE TO THE DOG COMPANION OF HAL FINNEY ONE OF
+                CRYPTO INDUSTRY'S TRAILBLAZER also rumored as "Satoshi
+                Nakamoto". AFFECTIONATELY KNOWN AS "ELSA" HIS BELOVED PET DOG.
+                Hal's faithful dog, joined him during various activities, making
+                her the true OG dog of the blockchain
+
                 <br />
 
-                <p>
-                  Our commitment to compliance and industry best practices
-                  ensures that the Elsa aligns with the highest standards of
-                  investment security and regulatory oversight, making it an
-                  ideal choice for investors seeking to diversify their
-                  portfolios with the innovative potential of Bitcoin.
-                </p>
+                <!-- <p>
+                  THIS PROJECT AIMS TO CELEBRATE THE SPECIAL BOND BETWEEN HAL
+                  FINNEY AND HIS FOUR-LEGGED FRIEND, WHILE ALSO INTRODUCING A
+                  PLAYFUL AND IMAGINATIVE ELEMENT INTO THE CRYPTO WORLD. ELSA's
+                  TWITTER PRESENCE HAS GARNERED A SIGNIFICANT FOLLOWING, AND HIS
+                  INFLUENCE EXTENDS BEYOND THE PET-LOVING COMMUNITY, SPARKING
+                  THE CURIOSITY AND ADMIRATION OF CRYPTO ENTHUSIASTS WORLDWIDE
+                </p> -->
                 <i
                   class="cs-hero_subtitle cs-font_18 cs-font_16_sm cs-body_line_height"
                   style="font-size: 14px"
