--- a/index.html
+++ b/index.html
@@ -168,8 +168,13 @@
             <span style="font-family: 'Space Ranger', sans-serif"> X </span
             >project. -->
               <p style="width: 98%; max-width: 500px">
-                Embark on a journey into the dynamic world of cryptocurrency
-                investment with the Elsa.
+                "Unveiling Elsa: A Distinct Tribute to Hal Finney's Loyal
+                Companion, the OG Dog of the Blockchain. Celebrating the Canine
+                Legacy beside a Cryptocurrency Trailblazer – Hal Finney,
+                affectionately known as Satoshi Nakamoto. Join us in honoring
+                Elsa, the faithful companion who stood by Hal during the dawn of
+                decentralized innovation. A Unique Homage to the Pioneering Duo
+                in Crypto History."
               </p>
             </span>
           </a>
@@ -192,7 +197,7 @@
 
     <!-- Start Fun Fact -->
     <section id="about">
-      <div class="cs-height_70 cs-height_lg_40"></div>
+      <div class="cs-height_lg_40"></div>
       <div class="container">
         <div class="row align-items-center flex-column-reverse-lg">
           <div
