--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
     <!-- End Header Section -->
 
     <!-- Start Hero -->
-    <section class="cs-hero cs-style1 cs-type1 cs-bg" id="home">
+    <section
+      class="cs-hero cs-style1 cs-type1 cs-bg"
+      id="home"
+      style="min-height: 673px"
+    >
       <div class="cs-dark_overlay"></div>
       <div class="container">
         <div
@@ -110,11 +114,7 @@
           data-wow-duration="1s"
           data-wow-delay="0.2s"
         >
-          <img
-            src="assets/img/logo5.png"
-            alt="Hero Image"
-            style="width: 400px"
-          />
+          <img src="assets/img/abt.jpg" alt="Hero Image" style="width: 400px" />
           <div class="cs-hero_img_sm">
             <!--          <img src="assets/img/hero_img_sm.png" alt="Hero Image" style="width: 200px;">-->
           </div>
@@ -137,6 +137,7 @@
           >
             Elsa
           </h1>
+
           <div class="cs-btn_group">
             <a
               href="tglink"
@@ -153,6 +154,7 @@
               ><span>TWITTER</span></a
             >
           </div>
+
           <br />
           <a
             class="cs-hero_subtitle cs-font_18 cs-font_16_sm cs-body_line_height"
@@ -167,16 +169,17 @@
             Ryoshi and Elon's
             <span style="font-family: 'Space Ranger', sans-serif"> X </span
             >project. -->
-              <p style="width: 98%; max-width: 500px">
-                "Unveiling Elsa: A Distinct Tribute to Hal Finney's Loyal
-                Companion, the OG Dog of the Blockchain. Celebrating the Canine
-                Legacy beside a Cryptocurrency Trailblazer – Hal Finney,
-                affectionately known as Satoshi Nakamoto. Join us in honoring
-                Elsa, the faithful companion who stood by Hal during the dawn of
-                decentralized innovation. A Unique Homage to the Pioneering Duo
-                in Crypto History."
+              <p style="width: 98%; max-width: 580px">
+                IT'S A UNIQUE TRIBUTE TO THE DOG COMPANION OF HAL FINNEY ONE OF
+                CRYPTO INDUSTRY'S TRAILBLAZER also rumored as "Satoshi
+                Nakamoto". AFFECTIONATELY KNOWN AS "ELSA" HIS BELOVED PET DOG.
+                Hal's faithful dog, joined him during various activities, making
+                her the true OG dog of the blockchain.
               </p>
             </span>
+            <span style="font-size: 16px; color: #fff; word-break: break-all"
+              >CA : 0x0000000000000000000000</span
+            >
           </a>
         </div>
       </div>
@@ -195,200 +198,6 @@
     </section>
     <!-- End Hero -->
 
-    <!-- Start Fun Fact -->
-    <section id="about">
-      <div class="cs-height_lg_40"></div>
-      <div class="container">
-        <div class="row align-items-center flex-column-reverse-lg">
-          <div
-            class="col-lg-7 wow fadeInLeft"
-            data-wow-duration="1s"
-            data-wow-delay="0.2s"
-          >
-            <div class="cs-height_0 cs-height_lg_40"></div>
-            <div class="cs-right_space_150">
-              <div class="cs-seciton_heading cs-style1">
-                <h2
-                  style="font-family: 'Space Ranger', sans-serif"
-                  class="cs-hero_secondary_title cs-font_24 cs-font_18_sm"
-                >
-                  ALL ABOUT US
-                </h2>
-                <h1
-                  class="cs-hero_title cs-font_64 cs-font_36_sm cs-bold cs-gradient_color"
-                  style="font-family: 'Space Ranger', sans-serif"
-                >
-                  Elsa
-                </h1>
-              </div>
-              <div class="cs-height_20 cs-height_lg_20"></div>
-              <a style="color: #fff; font-size: 20px">
-                IT'S A UNIQUE TRIBUTE TO THE DOG COMPANION OF HAL FINNEY ONE OF
-                CRYPTO INDUSTRY'S TRAILBLAZER also rumored as "Satoshi
-                Nakamoto". AFFECTIONATELY KNOWN AS "ELSA" HIS BELOVED PET DOG.
-                Hal's faithful dog, joined him during various activities, making
-                her the true OG dog of the blockchain
-
-                <br />
-
-                <!-- <p>
-                  THIS PROJECT AIMS TO CELEBRATE THE SPECIAL BOND BETWEEN HAL
-                  FINNEY AND HIS FOUR-LEGGED FRIEND, WHILE ALSO INTRODUCING A
-                  PLAYFUL AND IMAGINATIVE ELEMENT INTO THE CRYPTO WORLD. ELSA's
-                  TWITTER PRESENCE HAS GARNERED A SIGNIFICANT FOLLOWING, AND HIS
-                  INFLUENCE EXTENDS BEYOND THE PET-LOVING COMMUNITY, SPARKING
-                  THE CURIOSITY AND ADMIRATION OF CRYPTO ENTHUSIASTS WORLDWIDE
-                </p> -->
-                <i
-                  class="cs-hero_subtitle cs-font_18 cs-font_16_sm cs-body_line_height"
-                  style="font-size: 14px"
-                  ><br /><br />Contract Address: 0x00000000000000000000</i
-                >
-              </a>
-
-              <div class="cs-height_25 cs-height_lg_15"></div>
-              <div class="cs-btn_group">
-                <a
-                  style="font-family: 'Space Ranger', sans-serif"
-                  href="https://app.uniswap.org/#/tokens/ethereum/0x00000000000000000000"
-                  class="cs-btn cs-btn_filed cs-accent_btn"
-                  style="margin-top: 2%"
-                >
-                  <span>Buy Now</span>
-                </a>
-                <a
-                  style="font-family: 'Space Ranger', sans-serif"
-                  href="https://www.dextools.io/app/en/ether/pair-explorer/0xd7e18371ea78d8b3274787c837daad55a71f93c4"
-                  class="cs-btn cs-btn_filed cs-accent_btn"
-                  style="margin-top: 2%"
-                >
-                  <span>View Chart</span>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-lg-5 wow fadeIn"
-            data-wow-duration="1s"
-            data-wow-delay="0.4s"
-          >
-            <img
-              src="assets/img/abt.jpg"
-              style="width: 100%; border-radius: 10px"
-              alt=""
-            />
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Fun Fact -->
-
-    <!-- Start Causes Seciton -->
-    <section id="tokenomics" style="margin-top: 20%">
-      <div class="container">
-        <div
-          class="cs-seciton_heading cs-style1 text-center wow fadeInUp"
-          data-wow-duration="1s"
-          data-wow-delay="0.2s"
-        >
-          <h1
-            class="cs-hero_title cs-font_64 cs-font_36_sm cs-bold cs-gradient_color"
-            style="font-family: 'Space Ranger', sans-serif"
-          >
-            OUR TOKENOMICS
-          </h1>
-        </div>
-        <div class="cs-height_50 cs-height_lg_30"></div>
-        <div class="row">
-          <div
-            class="col-lg-4 col-12 wow fadeIn"
-            data-wow-duration="1s"
-            data-wow-delay="0.2s"
-          >
-            <div class="cs-light_bg text-center cs-radius_10">
-              <div class="cs-height_60 cs-height_lg_60"></div>
-              <div
-                class="cs-font_64 cs-font_36_sm cs-m0 cs-primary_font cs-primary_color cs-heading_line_height cs-bold"
-                style="font-family: 'Space Ranger', sans-serif"
-              >
-                <span
-                  style="font-family: 'Space Ranger', sans-serif !important"
-                ></span
-                >Burned
-              </div>
-              <p
-                class="cs-m0 cs-font_24 cs-heading_line_height cs-font_22_sm"
-                style="font-family: 'Simpsonfont', sans-serif"
-              >
-                LP
-              </p>
-              <div class="cs-height_65 cs-height_lg_65"></div>
-            </div>
-            <div class="cs-height_25 cs-height_lg_25"></div>
-          </div>
-
-          <div
-            class="col-lg-4 col-12 wow fadeIn"
-            data-wow-duration="1s"
-            data-wow-delay="0.4s"
-          >
-            <div class="cs-light_bg text-center cs-radius_10">
-              <div class="cs-height_60 cs-height_lg_60"></div>
-              <div
-                class="cs-font_64 cs-font_36_sm cs-m0 cs-primary_font cs-primary_color cs-heading_line_height cs-bold"
-                style="font-family: 'Space Ranger', sans-serif"
-              >
-                <span
-                  style="font-family: 'Space Ranger', sans-serif"
-                  data-count-to="1.00"
-                  class="odometer"
-                ></span
-                >T
-              </div>
-              <p
-                class="cs-m0 cs-font_24 cs-heading_line_height cs-font_22_sm"
-                style="font-family: 'Simpsonfont', sans-serif"
-              >
-                Supply
-              </p>
-              <div class="cs-height_65 cs-height_lg_65"></div>
-            </div>
-            <div class="cs-height_25 cs-height_lg_25"></div>
-          </div>
-          <div
-            class="col-lg-4 col-12 wow fadeIn"
-            data-wow-duration="1s"
-            data-wow-delay="0.5s"
-          >
-            <div class="cs-light_bg text-center cs-radius_10">
-              <div class="cs-height_60 cs-height_lg_60"></div>
-              <div
-                class="cs-font_64 cs-font_36_sm cs-m0 cs-primary_font cs-primary_color cs-heading_line_height cs-bold"
-                style="font-family: 'Space Ranger', sans-serif"
-              >
-                <span style="font-family: 'Space Ranger', sans-serif"></span
-                >$Elsa
-              </div>
-              <p
-                class="cs-m0 cs-font_24 cs-heading_line_height cs-font_22_sm"
-                style="font-family: 'Simpsonfont', sans-serif"
-              >
-                Ticker
-              </p>
-              <div class="cs-height_65 cs-height_lg_65"></div>
-            </div>
-            <div class="cs-height_25 cs-height_lg_25"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Causes Seciton -->
-    <!-- Start About -->
-
-    <!-- End About -->
-    <div class="cs-height_100 cs-height_lg_70"></div>
-    <!-- Start Services -->
-
     <!-- End Services -->
 
     <!-- Start Team -->
@@ -399,7 +208,7 @@
     <!-- End Goals -->
 
     <!-- start Roadmap -->
-    <section id="tokenomics" style="margin-top: 20%">
+    <!-- <section id="tokenomics" style="margin-top: 20%">
       <div class="container">
         <div
           class="cs-seciton_heading cs-style1 text-center wow fadeInUp"
@@ -412,7 +221,7 @@
             Roadmap
           </h1>
         </div>
-        <!-- roadmap card -->
+       
         <div class="row mt-5 pt-3">
           <div
             class="col-md-4 wow fadeInLeft"
@@ -468,7 +277,7 @@
               </ul>
             </div>
           </div>
-          <!-- <div class="col-md-3">
+         <div class="col-md-3">
             <div class="road_card">
               <h3 class="fs-5 font-medium text-white my-2">THE PAST AWAKENS</h3>
               <img
@@ -485,10 +294,10 @@
                 <li>Roadmap V2</li>
               </ul>
             </div>
-          </div> -->
+          </div> 
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Roadmap -->
 
     <!-- Start FAQ -->
@@ -597,171 +406,12 @@
 
     <!-- End Contact -->
     <!-- Start CTA -->
-    <div class="cs-height_100 cs-height_lg_70"></div>
-    <div class="cs-footer_wrap cs-bg" data-src="assets/img/footer_bg_1.html">
-      <div
-        class="container wow fadeIn"
-        data-wow-duration="1s"
-        data-wow-delay="0.2s"
-      >
-        <div class="cs-cta cs-style1 cs-accent_bg text-center">
-          <h1
-            class="cs-hero_title cs-font_64 cs-font_36_sm cs-bold cs-gradient_color"
-            style="font-family: 'Space Ranger', sans-serif"
-          >
-            Join our Community
-          </h1>
-          <!-- <div class="cs-height_10 cs-height_lg_10"></div>
-<div class="cs-height_30 cs-height_lg_30"></div> -->
-          <div style="text-align: center">
-            <img
-              src="/assets/img/foot.png"
-              style="max-width: 420px; width: 100%"
-              alt=""
-            />
-          </div>
-          <div class="cs-cta_btns cs-center">
-            <a href="tglink" class="cs-btn cs-btn_filed cs-white_btn_2">
-              <span style="font-family: 'Space Ranger', sans-serif"
-                >Join Our Community</span
-              >
-            </a>
-            <a href="twitterlink" class="cs-btn cs-btn_filed cs-white_btn">
-              <span style="font-family: 'Space Ranger', sans-serif"
-                >Follow us on Twitter</span
-              >
-            </a>
-          </div>
-        </div>
-      </div>
-      <!-- End CTA -->
-      <!-- Start Footer -->
-      <footer class="cs-footer text-center">
-        <div class="cs-height_85 cs-height_lg_25"></div>
-        <div
-          class="container wow fadeIn"
-          data-wow-duration="1s"
-          data-wow-delay="0.5s"
-        >
-          <div
-            class="cs-copyright text-center"
-            style="ffont-family: 'Space Ranger', sans-serif"
-          >
-            All Rights Reserved
-            <span
-              class="cs-primary_font cs-primary_color"
-              style="font-family: 'AngryBirds', sans-serif"
-              >Elsa © 2024</span
-            >
-          </div>
-        </div>
-        <div class="cs-height_25 cs-height_lg_25"></div>
-      </footer>
-      <!-- End Footer -->
-    </div>
 
     <!-- Start Connect Modal -->
 
     <!-- Start Connect Modal -->
     <!-- Start Mint Modal -->
-    <div class="cs-modal" data-modal="mint">
-      <div class="cs-modal_in">
-        <div class="cs-modal_container cs-white_bg">
-          <button class="cs-close_modal cs-center cs-primary_bg">
-            <svg
-              width="12"
-              height="12"
-              viewBox="0 0 12 12"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M11.7071 1.70711C12.0976 1.31658 12.0976 0.683417 11.7071 0.292893C11.3166 -0.0976311 10.6834 -0.0976311 10.2929 0.292893L11.7071 1.70711ZM0.292893 10.2929C-0.0976311 10.6834 -0.0976311 11.3166 0.292893 11.7071C0.683417 12.0976 1.31658 12.0976 1.70711 11.7071L0.292893 10.2929ZM1.70711 0.292893C1.31658 -0.0976311 0.683417 -0.0976311 0.292893 0.292893C-0.0976311 0.683417 -0.0976311 1.31658 0.292893 1.70711L1.70711 0.292893ZM10.2929 11.7071C10.6834 12.0976 11.3166 12.0976 11.7071 11.7071C12.0976 11.3166 12.0976 10.6834 11.7071 10.2929L10.2929 11.7071ZM10.2929 0.292893L0.292893 10.2929L1.70711 11.7071L11.7071 1.70711L10.2929 0.292893ZM0.292893 1.70711L10.2929 11.7071L11.7071 10.2929L1.70711 0.292893L0.292893 1.70711Z"
-                fill="white"
-              />
-            </svg>
-          </button>
-          <div class="cs-mint_secton">
-            <h2 class="cs-font_22 text-uppercase cs-normal cs-m0 text-center">
-              Collect your NFT before <br />the deadline.
-            </h2>
-            <div class="cs-height_25 cs-height_lg_25"></div>
-            <div class="cs-mint_avatar text-center">
-              <img src="assets/img/avatar_1.html" alt="" />
-            </div>
-            <div class="cs-height_50 cs-height_lg_30"></div>
-            <ul
-              class="cs-list cs-style2 cs-mp0 cs-primary_color cs-primary_font"
-            >
-              <li>
-                <div class="cs-list_left">Remaining</div>
-                <div class="cs-list_right">725 / 725 Minted</div>
-              </li>
-              <li>
-                <div class="cs-list_left">
-                  Quantity / <span class="cs-accent_color">0.25 ETH</span>
-                </div>
-                <div class="cs-list_right">
-                  <div class="cs-quantity">
-                    <button class="cs-quantity_btn cs-center">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true"
-                        role="img"
-                        width="1em"
-                        height="1em"
-                        preserveAspectRatio="xMidYMid meet"
-                        viewBox="0 0 24 24"
-                      >
-                        <path
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-linecap="round"
-                          stroke-width="2"
-                          d="M20 12H4"
-                        />
-                      </svg>
-                    </button>
-                    <input type="text" value="1" class="cs-quantity_number" />
-                    <button class="cs-quantity_btn cs-center">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true"
-                        role="img"
-                        width="1em"
-                        height="1em"
-                        preserveAspectRatio="xMidYMid meet"
-                        viewBox="0 0 24 24"
-                      >
-                        <path
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-linecap="round"
-                          stroke-width="2"
-                          d="M12 20v-8m0 0V4m0 8h8m-8 0H4"
-                        />
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="cs-list_left">Total Price</div>
-                <div class="cs-list_right">0.5 ETH</div>
-              </li>
-            </ul>
-            <div class="cs-height_25 cs-height_lg_25"></div>
-            <button
-              class="cs-btn cs-btn_filed cs-accent_btn text-center text-uppercase w-100"
-            >
-              <span>Mint Now</span>
-            </button>
-            <div class="cs-height_15 cs-height_lg_15"></div>
-            <p class="cs-m0 text-center">Presale & whitelist : Soldout</p>
-          </div>
-        </div>
-      </div>
-    </div>
+
     <!-- Start Mint Modal -->
 
     <!-- Script -->
