--- a/index.html
+++ b/index.html
@@ -173,7 +173,10 @@
                 her the true OG dog of the blockchain.
               </p>
             </span>
-            <span style="font-size: 16px; color: #fff; word-break: break-all"
+            <p style="font-size: 22px; font-weight: 600">
+              Supply : 1B | LP : Burnt | Tax : 0/0
+            </p>
+            <span style="font-size: 17px; color: #fff; word-break: break-all"
               >CA : 0x0000000000000000000000</span
             >
           </a>
