--- a/index.html
+++ b/index.html
@@ -68,12 +68,7 @@
                   class="cs-nav_list"
                   style="font-family: 'Space Ranger', sans-serif"
                 >
-                  <li><a href="#home" class="cs-smoth_scroll">Home</a></li>
-                  <li><a href="#about" class="cs-smoth_scroll">About</a></li>
-
-                  <li>
-                    <a href="#tokenomics" class="cs-smoth_scroll">Tokenomics</a>
-                  </li>
+                  <li><a href="chartlink" class="cs-smoth_scroll">Chart</a></li>
 
                   <li>
                     <a href="twitterlink" class="cs-smoth_scroll">Twitter</a>
