--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
       <div class="cs-dark_overlay"></div>
       <div class="container">
         <div
-          class="cs-hero_img wow fadeIn"
+          class="cs-hero_img wow fadeInRight"
           data-wow-duration="1s"
-          data-wow-delay="0.2s"
+          data-wow-delay="0.3s"
         >
           <img src="assets/img/abt.jpg" alt="Hero Image" style="width: 400px" />
           <div class="cs-hero_img_sm">
@@ -111,11 +111,7 @@
           </div>
         </div>
 
-        <div
-          class="cs-hero_text wow fadeInLeft"
-          data-wow-duration="1s"
-          data-wow-delay="0.35s"
-        >
+        <div class="cs-hero_text">
           <!-- <h2
             style="font-family: 'Space Ranger', sans-serif"
             class="cs-hero_secondary_title cs-font_24 cs-font_18_sm"
@@ -123,13 +119,19 @@
             Introducing THE REAL X
           </h2> -->
           <h1
-            class="cs-hero_title cs-font_64 cs-font_36_sm cs-bold title"
+            class="cs-hero_title cs-font_64 cs-font_36_sm cs-bold title wow fadeInLeft"
             style="font-family: 'Space Ranger', sans-serif"
+            data-wow-duration="1s"
+            data-wow-delay="0.35s"
           >
             Elsa
           </h1>
 
-          <div class="cs-btn_group">
+          <div
+            class="cs-btn_group wow fadeInLeft"
+            data-wow-duration="1s"
+            data-wow-delay="0.65s"
+          >
             <a
               href="tglink"
               class="cs-btn cs-btn_filed cs-accent_btn"
@@ -160,18 +162,32 @@
             Ryoshi and Elon's
             <span style="font-family: 'Space Ranger', sans-serif"> X </span
             >project. -->
-              <p style="width: 98%; max-width: 580px">
+              <p
+                style="width: 98%; max-width: 580px"
+                class="wow fadeInLeft"
+                data-wow-duration="1s"
+                data-wow-delay="0.95s"
+              >
                 IT'S A UNIQUE TRIBUTE TO THE DOG COMPANION OF HAL FINNEY ONE OF
                 CRYPTO INDUSTRY'S TRAILBLAZER also rumored as "Satoshi
                 Nakamoto". AFFECTIONATELY KNOWN AS "ELSA" HIS BELOVED PET DOG.
-                Hal's faithful dog, joined him during various activities, making
-                her the true OG dog of the blockchain.
+                HAL'S FAITHFUL DOG, JOINED HIM DURING VARIOUS ACTIVITIES, MAKING
+                HER ONE THE TRUE OG DOG IN THE BLOCKCHAIN
               </p>
             </span>
-            <p style="font-size: 22px; font-weight: 600">
+            <p
+              style="font-size: 22px; font-weight: 600"
+              class="wow fadeInLeft"
+              data-wow-duration="1s"
+              data-wow-delay="0.125s"
+            >
               Supply : 1B | LP : Burnt | Tax : 0/0
             </p>
-            <span style="font-size: 17px; color: #fff; word-break: break-all"
+            <span
+              style="font-size: 17px; color: #fff; word-break: break-all"
+              class="wow fadeInLeft"
+              data-wow-duration="1s"
+              data-wow-delay="0.129s"
               >CA : 0x0000000000000000000000</span
             >
           </a>
