--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
                   <li><a href="chartlink" class="cs-smoth_scroll">Chart</a></li>
 
                   <li>
-                    <a href="twitterlink" class="cs-smoth_scroll">Twitter</a>
+                    <a
+                      href="https://twitter.com/elsadogerc"
+                      class="cs-smoth_scroll"
+                      >Twitter</a
+                    >
                   </li>
-                  <li><a href="tglink">Telegram</a></li>
+                  <li><a href="https://t.me/elsaerc">Telegram</a></li>
                 </ul>
               </div>
             </div>
@@ -133,14 +137,14 @@
             data-wow-delay="0.65s"
           >
             <a
-              href="tglink"
+              href="https://t.me/elsaerc"
               class="cs-btn cs-btn_filed cs-accent_btn"
               style="margin-top: 2%; font-family: 'Space Ranger', sans-serif"
               ><span>TELEGRAM</span></a
             >
 
             <a
-              href="twitterlink"
+              href="https://twitter.com/elsadogerc"
               target="_blank"
               class="cs-btn cs-btn_filed cs-accent_btn"
               style="margin-top: 2%; font-family: 'Space Ranger', sans-serif"
@@ -176,7 +180,7 @@
               </p>
             </span>
             <p
-              style="font-size: 22px; font-weight: 600"
+              style="font-size: 22px; font-weight: 400"
               class="wow fadeInLeft"
               data-wow-duration="1s"
               data-wow-delay="0.125s"
