--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
                 data-wow-duration="1s"
                 data-wow-delay="0.95s"
               >
-                IT'S A UNIQUE TRIBUTE TO THE DOG COMPANION OF HAL FINNEY ONE OF
-                CRYPTO INDUSTRY'S TRAILBLAZER also rumored as "Satoshi
-                Nakamoto". AFFECTIONATELY KNOWN AS "ELSA" HIS BELOVED PET DOG.
-                HAL'S FAITHFUL DOG, JOINED HIM DURING VARIOUS ACTIVITIES, MAKING
-                HER ONE THE TRUE OG DOG IN THE BLOCKCHAIN
+                It's a unique tribute to the dog companion of Hal Finney one of
+                crypto industry's trailblazer also rumored as "Satoshi
+                Nakamoto". affectionately known as "ELSA" his beloved pet dog.
+                Hal's faithful dog accompany him during various activities,
+                making her one of the true "OG DOG" in the ethereum network.
               </p>
             </span>
             <p
