--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
                   class="cs-nav_list"
                   style="font-family: 'Space Ranger', sans-serif"
                 >
-                  <li><a href="chartlink" class="cs-smoth_scroll">Chart</a></li>
+                  <li>
+                    <a
+                      href="https://www.dextools.io/app/en/ether/pair-explorer/0x11cdfe0ca84b5f5e87616f670686ac24e500b07f"
+                      class="cs-smoth_scroll"
+                      >Chart</a
+                    >
+                  </li>
 
                   <li>
                     <a
@@ -157,15 +163,7 @@
             class="cs-hero_subtitle cs-font_18 cs-font_16_sm cs-body_line_height"
             style="font-size: 20px"
           >
-            <!-- style="font-family: 'Space Ranger', sans-serif" -->
             <span>
-              <!-- X </span
-            >is here, <br />
-            <b style="font-family: 'Space Ranger', sans-serif"> Elsa </b>-
-            all new meme based on <br />
-            Ryoshi and Elon's
-            <span style="font-family: 'Space Ranger', sans-serif"> X </span
-            >project. -->
               <p
                 style="width: 98%; max-width: 580px"
                 class="wow fadeInLeft"
@@ -210,8 +208,6 @@
         <div class="bubble x10"></div>
       </div>
     </section>
-
-    <!-- Start Mint Modal -->
 
     <!-- Script -->
     <script src="assets/js/plugins/jquery-3.6.0.min.js"></script>
